--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>212 Coffee site coming soon...</h1>
+<html>
+  <head>
+    <title>212 Coffee</title>
+  </head>
+  <body>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScmi7HaWXSQjoWNF1n4vyxCAYtZgCA5q_2AdWYLX_cEYVNGkw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+  </body>
+</html>
