--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>212 Coffee</title>
   </head>
   <body>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScmi7HaWXSQjoWNF1n4vyxCAYtZgCA5q_2AdWYLX_cEYVNGkw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    <iframe style="width: 100%; height: 100%" src="https://docs.google.com/forms/d/e/1FAIpQLScmi7HaWXSQjoWNF1n4vyxCAYtZgCA5q_2AdWYLX_cEYVNGkw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
   </body>
 </html>
