--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>212 Coffee</title>
   </head>
-  <body>
+  <body style="margin: 0">
     <iframe style="width: 100%; height: 100%" src="https://docs.google.com/forms/d/e/1FAIpQLScmi7HaWXSQjoWNF1n4vyxCAYtZgCA5q_2AdWYLX_cEYVNGkw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
   </body>
 </html>
